Fix z-index on x button

--- a/src/app/nav_bar.css
+++ b/src/app/nav_bar.css
@@ -26,6 +26,8 @@
 .nav_bar_mobile_menu_items{
   display: none;
   background-color: #f9f5f3;
+  z-index: 2;
+  position: relative;
 }
 
 .nav_bar_mobile_mobile_hamburger {
